<resources>
    <string name="app_name">arta</string>
    <string name="str_jangovar">ЖАНГОВАР ТАРТИБ</string>
    <string name="str_orudiya">ОРУДИЯ XОЛАТИ, ТАЪМИНЛАНГАНЛИГИ</string>
    <string name="str_ot_ochish">ЎТ ОЧИШ ВАЗИФАСИ</string>
    <string name="str_xabarlar">ХАБАРЛАР</string>
    <string name="str_qoshimcha">KЎШИМЧА</string>
    <string name="str_adn">- АДH</string>
    <string name="str_arteleriya_batareyasi">- артиллерия батареяси</string>
    <string name="str_raschyot">- расчет</string>
    <string name="str_yakunlash">ЯКУНЛАШ</string>
    <string name="str_koordinatalar">КООРДИНАТАЛАР:</string>
    <string name="str_malumotlarni_qabul_qilish">МАЪЛУМОТЛАРНИ KАБУЛ KИЛИШ</string>
    <string name="str_batareya_qkp">БАТАРЕЯ KКП</string>
    <string name="str_batareya_uop">БАТАРЕЯ ЎОП</string>
    <string name="str_asosiy_yonaltiruvchi_nuqta">АСОСИЙ ЙЎНАЛТИРУВЧИ НУKТА</string>
    <string name="str_zaxira_yonaltiruvchi_nuqta">ЗАХИРА ЙЎНАЛТИРУВЧИ НУKТА</string>
    <string name="str_tungi_1">ТУНГИ 1-ЙЎНАЛТИРУВЧИ НУKТА</string>
    <string name="str_tungi_2">ТУНГИ 2-ЙЎНАЛТИРУВЧИ НУKТА</string>
    <string name="str_4_orudiya">4-ОРУДИЯ</string>
    <string name="str_eng_kichik">ЭНГ КИЧИК МЎЛЖАЛ:</string>
    <string name="str_qoshnilar">KЎШНИЛАР</string>
    <string name="str_toliq_zaryad">Тўлик заряд</string>
    <string name="str_kam_zaryad">Кам-ган заряд</string>
    <string name="x">Х =</string>
    <string name="y">Y =</string>
    <string name="h">H =</string>
    <string name="str_malumotlarni_qolda">МАЪЛУМОТЛАРНИ ХАРИТАДА АКС ЭТИШ</string>
    <string name="str_bekor_qilish">БЕКОР KИЛИШ</string>
    <string name="str_kiritish">КИРИТИШ</string>
    <string name="str_orudiya_turi">ОРУДИЯ ТУРИ</string>
    <string name="str_oq_dorilar">ЎK-ДОРИЛАР</string>
    <string name="str_malumot">МАЪЛУМОТ</string>
    <string name="str_ot_ochish_jangovar">ЎТ ОЧИШ</string>
    <string name="str_asosiy_yn">Асосий ЙН</string>
    <string name="str_zaxira_yn">Захира ЙН</string>
    <string name="str_defis">-</string>
    <string name="str_snaryad_soni">Снаряд сони</string>
    <string name="str_qoldiq">Колдик</string>
    <string name="str_nishon">Нишон</string>
    <string name="str_number">№</string>
    <string name="str_nishon_xarak">нишон харак</string>
    <string name="str_shkala">шкала</string>
    <string name="str_zaryad">заряд</string>
    <string name="str_snaryad_turi">снаряд тури</string>
    <string name="str_portlatgich">портлатгич</string>
    <string name="str_pr">Пр</string>
    <string name="str_ur">Ур</string>
    <string name="str_ugl">Угл</string>
    <string name="str_equal_mark">=</string>
    <string name="str_snaryad_sarfi">снаряд сарфи</string>
    <string name="str_komanda">Команда</string>
    <string name="str_bajarildi">БАЖАРИЛДИ</string>
    <string name="str_bajarilmadi">БАЖАРИЛМАДИ</string>
    <string name="str_yangilash">ЯНГИЛАШ</string>
    <string name="str_history">Тарих</string>
    <string name="str_no_history">Сизда сакланган маълумотлар мавжуд эмас</string>

    <!-- string arrays -->
    <string-array name="spinner_orudiya_turi">
        <item>122 мм Д-30</item>
        <item>152 мм Д-20</item>
        <item>152 мм 2А36</item>
        <item>122 мм 2С1</item>
        <item>152 мм 2С3</item>
        <item>203 мм 2С7</item>
        <item>122 мм БМ-21</item>
        <item>122 мм БМ-19</item>
        <item>220 мм 9П140</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>