<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_menu"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragments.jangovar.MalumotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_asosiy_yn"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotAsosiyYn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_defis"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotAsosiyYn2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/str_zaxira_yn"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotZaxiraYn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_defis"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotZaxiraYn2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_snaryad_soni"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotSnaryadSoni"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/str_qoldiq"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etMalumotQoldiq"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_et_no_solid"
            android:textAlignment="center"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:padding="10dp">

        <Button
            android:id="@+id/btnKiritish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:text="@string/str_kiritish"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>